--- a/COVID.ipynb
+++ b/COVID.ipynb
@@ -109,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weather = read_multi_excel('/home/vytas/ownCloud/DATA/Oras2020_1-10/*.xlsx')\n",
+    "weather = read_multi_excel('https://raw.githubusercontent.com/VytautasV/cov2_blood/master/weather/.xlsx')\n",
     "weather.dropna(inplace=True)"
    ]
   },
